--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.spriteshape": "9.0.4",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "3.1.2",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.5.1",
+    "com.unity.feature.2d": "2.0.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.probuilder": "5.2.3",
     "com.unity.textmeshpro": "3.0.7",
